--- a/TaskManager_iTechArt/TaskManager_iTechArt.csproj
+++ b/TaskManager_iTechArt/TaskManager_iTechArt.csproj
@@ -43,6 +43,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AutoMapper, Version=6.1.1.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
+      <HintPath>..\packages\AutoMapper.6.1.1\lib\net45\AutoMapper.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Microsoft.AI.Agent.Intercept, Version=1.2.0.1011, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.ApplicationInsights.Agent.Intercept.1.2.0\lib\net45\Microsoft.AI.Agent.Intercept.dll</HintPath>
       <Private>True</Private>
@@ -124,6 +128,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Besiness_Logic\DTO\CategoryDTO.cs" />
+    <Compile Include="Besiness_Logic\DTO\LogDTO.cs" />
+    <Compile Include="Besiness_Logic\DTO\TaskDTO.cs" />
+    <Compile Include="Besiness_Logic\DTO\Task_auditDTO.cs" />
+    <Compile Include="Besiness_Logic\DTO\Task_statusDTO.cs" />
+    <Compile Include="Besiness_Logic\DTO\UserDTO.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
